@@ -4,6 +4,8 @@ Revision history for Perl extension Dist-Zilla-LocaleTextDomain
      - Fixed broken call to `log_fatal` in the `msg-init` command that caused
        the actual error to be lost in favor of a bad method call error. Thanks
        Joenio Costa for the patch.
+     - Added a note on how to get Locale::TextDomain to return character
+       strings instead of byte strings.
 
 0.81  2012-10-02T16:25:43Z
       - Removed tests for the `add_lang` command, which was never shipped,
